<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_weight="1"
    android:orientation="vertical"

    tools:context=".LoginActivity">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"


            android:layout_weight="8"
            android:background="#001111"

            android:gravity="bottom"

            android:orientation="vertical"
            android:padding="25dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@xml/text_view_button"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"

                android:maxLines="1"
                android:padding="10dp"


                android:requiresFadingEdge="horizontal|vertical"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@xml/text_view_button"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"

                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textAlignment="center"

                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp" />


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:background="@xml/mybutton"
                android:text="@string/action_sign_in"
                android:textColor="@color/button_text_color_white"

                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reset_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="end"
                android:layout_marginTop="35dp"

                android:layout_marginBottom="25dp"
                android:gravity="center_vertical"

                android:shadowColor="@color/white"
                android:shadowDx="2"
                android:shadowDy="2"


                android:shadowRadius="1"
                android:text="Forget Password ?"
                android:textAlignment="center"


                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="normal"
                app:fontFamily="@font/carter_one" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUp_area"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_weight="2"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/or2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#161515"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="NOT A MEMBER YET?"
                android:textAlignment="center"
                android:textColor="#E53935"
                android:textSize="24sp"
                android:textStyle="bold"

                app:fontFamily="@font/carter_one" />

            <Button
                android:id="@+id/email_sign_up_button2"

                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="8dp"
                android:background="@xml/circular_button_red"


                android:shadowColor="#161515"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"

                android:text="@string/action_sign_up"
                android:textAllCaps="true"
                android:textColor="@color/button_text_color_white"

                android:textSize="18sp"

                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>